measurements/measure23720.out
cl-gpusrv2.nis.csa.iisc.ac.in
In file included from /usr/include/c++/4.8.2/chrono:35:0,
                 from ./main.cu:5:
/usr/include/c++/4.8.2/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
==========================================================================
./diag_mult_server: /lib64/libstdc++.so.6: version `CXXABI_1.3.8' not found (required by ./diag_mult_server)
./diag_mult_server: /lib64/libstdc++.so.6: version `GLIBCXX_3.4.21' not found (required by ./diag_mult_server)
======== Error: Application returned non-zero code 1
==========================================================================
./diag_mult_server: /lib64/libstdc++.so.6: version `CXXABI_1.3.8' not found (required by ./diag_mult_server)
./diag_mult_server: /lib64/libstdc++.so.6: version `GLIBCXX_3.4.21' not found (required by ./diag_mult_server)
======== Error: Application returned non-zero code 1
==========================================================================
./diag_mult_server: /lib64/libstdc++.so.6: version `CXXABI_1.3.8' not found (required by ./diag_mult_server)
./diag_mult_server: /lib64/libstdc++.so.6: version `GLIBCXX_3.4.21' not found (required by ./diag_mult_server)
======== Error: Application returned non-zero code 1
==========================================================================
./diag_mult_server: /lib64/libstdc++.so.6: version `CXXABI_1.3.8' not found (required by ./diag_mult_server)
./diag_mult_server: /lib64/libstdc++.so.6: version `GLIBCXX_3.4.21' not found (required by ./diag_mult_server)
======== Error: Application returned non-zero code 1
==========================================================================
